# todo_list

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entities/: mod.rs  post.rs  prelude.rs  todo.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230814_000001_create_table_todo.rs
service/: Cargo.toml
service/src/: lib.rs  mutation.rs  query.rs
src/: main.rs
